Alterando rota de listar produtos no no create-sales

--- a/src/components/create-sales/create-sales.component.html
+++ b/src/components/create-sales/create-sales.component.html
@@ -16,8 +16,8 @@
             <mat-icon matPrefix color="primary">shopping_cart</mat-icon>
             <select matNativeControl formControlName="product_id">
               <option value="" disabled selected>Selecione um produto</option>
-              <option *ngFor="let product of products" [value]="product.id">
-                {{ product.name }}
+              <option *ngFor="let product of products" [value]="product.product_id">
+                {{ product.product_name }}
               </option>
             </select>
           </mat-form-field>
