--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -25,7 +25,7 @@
               <td class="p-4 font-medium text-gray-800">{{ employee.email }}</td>
               <td class="p-4 font-medium text-gray-800">{{ employee.store }}</td>
               <td class="p-4 font-medium text-gray-800">
-                <button class="rounded-full">
+                <button class="rounded-full" (click)="openEditDialog(employee.id)">
                   <mat-icon color="primary">edit</mat-icon>
                 </button>
                 <button  class="pl-2 rounded-full">
@@ -38,4 +38,3 @@
       </div>
     </div>
   </div>
-  
