Enviando form com File no update de funcionários

--- a/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
+++ b/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
@@ -26,9 +26,11 @@
       <label class="text-black font-medium" for="image_url">Foto do Funcionário</label> 
        <input  
         formControlName="image_url" 
+        (change)="onFileSelected($event)"
         name="image_url"
-        accept="image/*"
         type="file"
+        accept="image/*"
+        class="file-input"
        />
     </div>
   </form>
