criando dialogo de update de produtos

--- a/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
+++ b/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
@@ -5,7 +5,7 @@
       <label class="text-black font-medium" for="image_url">Foto do Funcionário</label> 
       <input  
         formControlName="image_url" 
-        (change)="onFileSelected($event)"
+        (change)="onChangeFileSelected($event)"
         name="image_url"
         type="file"
         accept="image/*"
