--- a/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
+++ b/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
@@ -1,15 +1,19 @@
-<h2 mat-dialog-title>Editar Funcionário</h2>
+<h2 mat-dialog-title class="border-b">Editar Funcionário</h2>
 <mat-dialog-content>
-  <form [formGroup]="formUpdateEmployee">
-    <div class="pb-5">  
+  <form [formGroup]="formUpdateEmployee" class="pt-3">
+    <div class="pb-5 flex flex-col gap-3">
       <label class="text-black font-medium" for="image_url">Foto do Funcionário</label> 
-      <input  
-        formControlName="image_url" 
-        (change)="onChangeFileSelected($event)"
-        name="image_url"
-        type="file"
-        accept="image/*"
-      />
+      <div class="flex items-center gap-6 overflow-hidden bg-gray-100 p-3 border-b border-b-gray-500">
+        <mat-icon color="primary" class="absolute">image</mat-icon>
+        <input  
+          formControlName="image_url" 
+          (change)="onChangeFileSelected($event)"
+          name="image_url"
+          type="file"
+          accept="image/*"
+          class="pl-10"
+        />
+      </div>
     </div>
     <mat-form-field class="w-full">
       <mat-icon matPrefix color="primary">person</mat-icon>
@@ -30,6 +34,7 @@
         name="email"
         type="email"
         placeholder="Digite o novo email do funcionário"
+        
       />
     </mat-form-field>
   </form>
@@ -41,4 +46,3 @@
     >Salvar</button>
   </div>
 </mat-dialog-content>
-
