retirando a ação de delete por enquanto

--- a/src/components/products/products.component.html
+++ b/src/components/products/products.component.html
@@ -34,9 +34,9 @@
                 <button class="rounded-full" (click)="openDialogPutProducts(product.product_id)">
                   <mat-icon color="primary">edit</mat-icon>
                 </button>
-                <button  class="pl-2 rounded-full">
+                <!-- <button  class="pl-2 rounded-full">
                   <mat-icon color="primary">delete</mat-icon>
-                </button>
+                </button> -->
               </td>
             </tr>
           </tbody>
