--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -28,9 +28,9 @@
                 <button class="rounded-full" (click)="openEditDialog(employee.id)">
                   <mat-icon color="primary">edit</mat-icon>
                 </button>
-                <button  class="pl-2 rounded-full">
+                <!-- <button  class="pl-2 rounded-full">
                   <mat-icon color="primary">delete</mat-icon>
-                </button>
+                </button> -->
               </td>
             </tr>
           </tbody>
