--- a/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
+++ b/src/components/employees/dialog-put-employees/dialog-put-employees.component.html
@@ -38,8 +38,8 @@
       />
     </mat-form-field>
     <mat-form-field class="w-full" appearance="fill">
-      <mat-label>Produto Vendido</mat-label>
-      <mat-icon matPrefix color="primary">shopping_cart</mat-icon>
+      <mat-label>Nível de permissão</mat-label>
+      <mat-icon matPrefix color="primary">supervisor_account</mat-icon>
       <select matNativeControl formControlName="role" name="role">
         <option value="" disabled selected>Selecione um cargo</option>
         <option value="ADMIN">Gerente</option>
