--- a/src/components/products/products.component.html
+++ b/src/components/products/products.component.html
@@ -5,7 +5,9 @@
 
     <div class="flex justify-between mb-6">
       <h2 class="text-4xl font-bold text-slate-950">Lista de Produtos</h2>
-      <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md">
+      <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
+      (click)="openDialogPostProducts()"
+      >
         <mat-icon>add</mat-icon>
         Adicionar Produto
       </button>
