Adicionando função de remover produtos na tabela

--- a/src/components/products/products.component.html
+++ b/src/components/products/products.component.html
@@ -42,9 +42,9 @@
               <button class="rounded-full" (click)="openDialogPutProducts(product.product_id)">
                 <mat-icon color="primary">edit</mat-icon>
               </button>
-              <!-- <button class="pl-2 rounded-full">
-                <mat-icon color="primary">delete</mat-icon>
-              </button> -->
+              <button class="pl-2 rounded-full" (click)="deleteProduct(product.product_id)">
+                <mat-icon color="warn">delete</mat-icon>
+              </button> 
             </td>
           </tr>
         </tbody>
