Alterando o título do dialogo de criaçãod e produtos

--- a/src/components/products/dialog-post-products/dialog-post-products.component.html
+++ b/src/components/products/dialog-post-products/dialog-post-products.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title class="border-b">Adicionando Funcionário</h2>
+<h2 mat-dialog-title class="border-b">Adicionando Produto</h2>
 <mat-dialog-content>
   <form [formGroup]="formCreateProducts" class="pt-3">
     <div class="pb-5 flex flex-col gap-3">
