--- a/src/components/create-sales/create-sales.component.html
+++ b/src/components/create-sales/create-sales.component.html
@@ -53,7 +53,10 @@
             [disabled]="!formSales.valid"
             type="submit"
           >
-            Registrar Venda
+          <ng-container *ngIf="isLoading; else buttonText">
+            <mat-spinner [diameter]="24"></mat-spinner>
+          </ng-container>
+          <ng-template #buttonText>Registrar</ng-template>
           </button>
         </form>
       </mat-card>
