--- a/src/components/employees/dialog-post-employees/dialog-post-employees.component.html
+++ b/src/components/employees/dialog-post-employees/dialog-post-employees.component.html
@@ -60,8 +60,13 @@
   <div class="flex justify-end w-full">
     <button mat-button color="warn" (click)="closeDialog()">Fechar</button>
     <button mat-button 
-      (click)="saveChanges()"
+      (click)="createEmployees()"
       color="primary" 
-    >Adicionar</button>
+    >
+    <ng-container *ngIf="isLoading; else buttonText">
+      <mat-spinner [diameter]="24"></mat-spinner>
+    </ng-container>
+    <ng-template #buttonText>Adicionar</ng-template>
+  </button>
   </div>
 </mat-dialog-content>
