--- a/src/components/auth/auth.component.html
+++ b/src/components/auth/auth.component.html
@@ -32,11 +32,14 @@
       <button
         mat-raised-button
         color="primary"
-        class="w-full mb-4"
-        [disabled]="!formAuth.valid"
+        class="w-full mb-4 flex items-center justify-center"
+        [disabled]="!formAuth.valid || isLoading"
         type="submit"
       >
-        Entrar
+        <ng-container *ngIf="isLoading; else buttonText">
+          <mat-spinner [diameter]="24"></mat-spinner>
+        </ng-container>
+        <ng-template #buttonText>Entrar</ng-template>
       </button>
     </form>
     <div class="mt-4 text-center">
