--- a/src/components/categories/dialog-put-categories/dialog-put-categories.component.html
+++ b/src/components/categories/dialog-put-categories/dialog-put-categories.component.html
@@ -31,6 +31,11 @@
     <button mat-button 
       (click)="saveChanges()"
       color="primary" 
-    >Salvar</button>
+    >
+    <ng-container *ngIf="isLoading; else buttonText">
+      <mat-spinner [diameter]="24"></mat-spinner>
+    </ng-container>
+    <ng-template #buttonText>Salvar</ng-template>
+  </button>
   </div>
 </mat-dialog-content>
