--- a/src/components/products/dialog-post-products/dialog-post-products.component.html
+++ b/src/components/products/dialog-post-products/dialog-post-products.component.html
@@ -74,6 +74,11 @@
     <button mat-button 
       (click)="createProduct()"
       color="primary" 
-    >Adicionar</button>
+    >
+    <ng-container *ngIf="isLoading; else buttonText">
+      <mat-spinner [diameter]="24"></mat-spinner>
+    </ng-container>
+    <ng-template #buttonText>Adicionar</ng-template>
+  </button>
   </div>
 </mat-dialog-content>
