--- a/src/components/employees/dialog-post-employees/dialog-post-employees.component.html
+++ b/src/components/employees/dialog-post-employees/dialog-post-employees.component.html
@@ -50,11 +50,11 @@
     <mat-form-field class="w-full" appearance="fill">
       <mat-label>Nível de permissão</mat-label>
       <mat-icon matPrefix color="primary">supervisor_account</mat-icon>
-      <select matNativeControl formControlName="role" name="role">
-        <option value="" disabled selected>Selecione um cargo</option>
-        <option value="ADMIN">Gerente</option>
-        <option value="USER">Funcionário</option>
-      </select>
+      <mat-select matNativeControl formControlName="role" name="role">
+        <mat-option value="" disabled selected>Selecione um cargo</mat-option>
+        <mat-option value="Subgerente">Sub-Gerente</mat-option>
+        <mat-option value="Vendedor">Vendedor</mat-option>
+      </mat-select>
     </mat-form-field>
   </form>
   <div class="flex justify-end w-full">
