Concertando rota de histórico de vendas

--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -21,16 +21,16 @@
         <tbody>
           <tr *ngFor="let sales of salesHistory" class="border-b text-center">
             <td class="p-4 flex justify-center items-center">
-              <img [src]="sales.product_image" alt="Foto do Produto" class="w-12 h-12 rounded-full object-cover" />
+              <img [src]="sales.productImg" alt="Foto do Produto" class="w-12 h-12 rounded-full object-cover" />
             </td>
-            <td class="p-4 font-medium text-gray-800">{{ sales.product_name }}</td>
-            <td class="p-4 font-medium text-gray-800">{{ sales.quantity_sold }}</td>
-            <td class="p-4 font-medium text-gray-800">{{ sales.total_billed }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.productName }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.quantitySold }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.totalBilled }}</td>
             <td class="p-4 flex justify-center items-center">
-              <img [src]="sales.user_image" alt="Foto do Funcionário" class="w-12 h-12 rounded-full object-cover" />
+              <img [src]="sales.userImg" alt="Foto do Funcionário" class="w-12 h-12 rounded-full object-cover" />
             </td>
-            <td class="p-4 font-medium text-gray-800">{{ sales.user_name }}</td>
-            <td class="p-4 font-medium text-gray-800">{{ sales.store_name }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.userName }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ sales.storeName }}</td>
           </tr>
         </tbody>
       </table>
