Organizando histórico de vendas com data, hora e cargo

--- a/src/components/employees/employees.component.html
+++ b/src/components/employees/employees.component.html
@@ -22,7 +22,7 @@
             <th class="px-6 py-3 font-normal text-white">Nome</th>
             <th class="px-6 py-3 font-normal text-white">Email</th>
             <th class="px-6 py-3 font-normal text-white">Empresa</th>
-            <th class="px-6 py-3 font-normal text-white">Função</th>
+            <th class="px-6 py-3 font-normal text-white">Cargo</th>
             <th class="px-6 py-3 font-normal text-white">Ações</th>
           </tr>
         </thead>
