--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -10,7 +10,9 @@
           <mat-icon>picture_as_pdf</mat-icon>
           Gerar PDF 
         </button> -->
-        <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md">
+        <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
+          (click)="generateExcel()"
+        >
           <mat-icon>description</mat-icon>
           Gerar Excel 
         </button>
