Ajustando tabela de histórico de vendas

--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -22,14 +22,14 @@
       <table class="min-w-full bg-white border border-gray-300 shadow">
         <thead>
           <tr class="bg-indigo-500 text-center border-b">
-            <th class="px-6 py-3 font-normal text-white">Foto</th>
-            <th class="px-6 py-3 font-normal text-white">Nome</th>
+            <th class="px-6 py-3 font-normal text-white">Foto do Produto</th>
+            <th class="px-6 py-3 font-normal text-white">Nome do Produto</th>
             <th class="px-6 py-3 font-normal text-white">Quantidade</th>
             <th class="px-6 py-3 font-normal text-white">Faturamento</th>
             <th class="px-6 py-3 font-normal text-white">Data</th>
             <th class="px-6 py-3 font-normal text-white">Horário</th>
-            <th class="px-6 py-3 font-normal text-white">Foto do Funcionário</th>
-            <th class="px-6 py-3 font-normal text-white">Nome do Funcionário</th>
+            <th class="px-6 py-3 font-normal text-white">Foto do Vendedor</th>
+            <th class="px-6 py-3 font-normal text-white">Vendedor</th>
             <th class="px-6 py-3 font-normal text-white">Cargo</th>
             <th class="px-6 py-3 font-normal text-white">Empresa</th>
           </tr>
