--- a/src/components/products/dialog-post-products/dialog-post-products.component.html
+++ b/src/components/products/dialog-post-products/dialog-post-products.component.html
@@ -30,7 +30,7 @@
       <mat-label>Quantidade</mat-label>
       <input 
         matInput 
-        formControlName="quantity" 
+        formControlName="stock" 
         name="quantity"
         type="number"
         placeholder="Digite a nova quantidade do produto"
@@ -61,9 +61,9 @@
     <mat-form-field class="w-full" appearance="fill">
       <mat-label>Categorias</mat-label>
       <mat-icon matPrefix color="primary">category</mat-icon>
-      <mat-select formControlName="category_id">
+      <mat-select formControlName="categories">
         <mat-option value="" disabled>Selecione uma categoria</mat-option>
-        <mat-option *ngFor="let category of categories" [value]="category.id">
+        <mat-option *ngFor="let category of categoriesData" [value]="category._id">
           {{ category.name }}
         </mat-option>
       </mat-select>
