criando venda passando apenas os ids; corrigindo a rota de listagem de categorias por loja

--- a/src/components/categories/categories.component.html
+++ b/src/components/categories/categories.component.html
@@ -30,7 +30,7 @@
               <img [src]="category.image_url" alt="Foto do Funcionário" class="w-12 h-12 rounded-full object-cover" />
             </td>
             <td class="p-4 font-medium text-gray-800">{{ category.name }}</td>
-            <td class="p-4 font-medium text-gray-800">{{ category.store_name }}</td>
+            <td class="p-4 font-medium text-gray-800">{{ category.storeName }}</td>
             <td class="p-4 font-medium text-gray-800">
               <button class="rounded-full" (click)="openEditDialog(category.id)">
                 <mat-icon color="primary">edit</mat-icon>
