--- a/src/components/create-sales/create-sales.component.html
+++ b/src/components/create-sales/create-sales.component.html
@@ -28,8 +28,8 @@
             <input
               matInput
               type="number"
-              name="quantity_sold"
-              formControlName="quantity_sold"
+              name="quantitySold"
+              formControlName="quantitySold"
               placeholder="Digite a quantidade"
             />
           </mat-form-field>
