Funcionalidade - Gerar PDF do histórico de vendas

--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -6,10 +6,12 @@
       <h2 class="text-4xl font-bold text-slate-950">Histórico de Vendas</h2>
 
       <div class="flex gap-4">
-        <!-- <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md">
+        <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
+          (click)="generatePDF()"
+        >
           <mat-icon>picture_as_pdf</mat-icon>
           Gerar PDF 
-        </button> -->
+        </button> 
         <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
           (click)="generateExcel()"
         >
@@ -19,7 +21,7 @@
       </div>
     </div>
     <div class="overflow-x-auto">
-      <table class="min-w-full bg-white border border-gray-300 shadow">
+      <table class="pdfLayout min-w-full bg-white border border-gray-300 shadow">
         <thead>
           <tr class="bg-indigo-500 text-center border-b">
             <th class="px-6 py-3 font-normal text-white">Foto do Produto</th>
