--- a/src/components/products/dialog-put-products/dialog-put-products.component.html
+++ b/src/components/products/dialog-put-products/dialog-put-products.component.html
@@ -61,9 +61,9 @@
     <mat-form-field class="w-full" appearance="fill">
       <mat-label>Categorias</mat-label>
       <mat-icon matPrefix color="primary">category</mat-icon>
-      <mat-select formControlName="category_id">
+      <mat-select formControlName="categories" name="categories">
         <mat-option value="" disabled>Selecione uma categoria</mat-option>
-        <mat-option *ngFor="let category of categories" [value]="category.id">
+        <mat-option *ngFor="let category of categoriesData" [value]="category.id">
           {{ category.name }}
         </mat-option>
       </mat-select>
