Corrigindo atualização de stock do produto

--- a/src/components/products/dialog-put-products/dialog-put-products.component.html
+++ b/src/components/products/dialog-put-products/dialog-put-products.component.html
@@ -30,8 +30,8 @@
       <mat-label>Quantidade</mat-label>
       <input 
         matInput 
-        formControlName="quantity" 
-        name="quantity"
+        formControlName="stock" 
+        name="stock"
         type="number"
         placeholder="Digite a nova quantidade do produto"
       />
