Criando um padding-botton na div que agrupa o histórico de vendas

--- a/src/components/saleshistory/saleshistory.component.html
+++ b/src/components/saleshistory/saleshistory.component.html
@@ -20,7 +20,7 @@
         </button>
       </div>
     </div>
-    <div class="overflow-x-auto">
+    <div class="overflow-x-auto pb-16">
       <table class="pdfLayout min-w-full bg-white border border-gray-300 shadow">
         <thead>
           <tr class="bg-indigo-500 text-center border-b">
