--- a/src/components/dashboard/layout-options.component.html
+++ b/src/components/dashboard/layout-options.component.html
@@ -5,8 +5,7 @@
       <mat-icon color="primary">dashboard</mat-icon>
       <h1 class="text-2xl font-bold text-gray-800">Dashboard</h1>
     </div>
-
-    <nav class="flex-1">
+    <nav class="flex-1 overflow-y-auto">
       <div class="flex flex-col items-start w-full text-gray-800 font-medium">
         <a
           *ngFor="let item of asideMenu"
@@ -21,7 +20,6 @@
         </a>
       </div>
     </nav>
-
     <div class="p-4 border-t flex items-center gap-4">
       <img
         [src]="user.image_url"
@@ -33,7 +31,6 @@
         <p class="text-sm text-gray-500">{{user.role}}</p>
       </div>
     </div>
-
     <div class="p-4 border-t">
       <button
         (click)="handleLogout()"
