Buscando produtos por nome

--- a/src/components/products/products.component.html
+++ b/src/components/products/products.component.html
@@ -1,16 +1,32 @@
 <div class="flex h-full">
   <app-dashboard />
-  
+
   <div class="ml-64 w-full px-8 py-6">
 
     <div class="flex justify-between mb-6">
       <h2 class="text-4xl font-bold text-slate-950">Lista de Produtos</h2>
-      <button class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
-      (click)="openDialogPostProducts()"
-      >
-        <mat-icon>add</mat-icon>
-        Adicionar Produto
-      </button>
+      <div class="flex gap-2">
+          <input 
+            #searchInput
+            type="search" 
+            class="bg-white border border-indigo-500 rounded-md px-4 py-2" 
+            placeholder="Buscar Produtos"
+            name="search"
+          />
+          <button 
+            class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
+            (click)="searchProducts(searchInput.value)"
+          >
+            <mat-icon class="cursor-pointer">search</mat-icon>
+          </button>
+        <button 
+          class="flex items-center gap-2 px-4 py-2 bg-indigo-500 text-white rounded-md"
+          (click)="openDialogPostProducts()"
+          >
+          <mat-icon>add</mat-icon>
+          Adicionar Produto
+        </button>
+      </div>
     </div>
 
     <div class="overflow-x-auto">
@@ -30,7 +46,8 @@
         <tbody>
           <tr *ngFor="let product of products" class="border-b text-center">
             <td class="p-4 flex justify-center items-center">
-              <img [src]="product.product_image_url" alt="Foto do Produto" class="w-12 h-12 rounded-full object-cover" />
+              <img [src]="product.product_image_url" alt="Foto do Produto"
+                class="w-12 h-12 rounded-full object-cover" />
             </td>
             <td class="p-4 font-medium text-gray-800">{{ product.product_name }}</td>
             <td class="p-4 font-medium text-gray-800">{{ product.formatted_price }}</td>
@@ -44,7 +61,7 @@
               </button>
               <button class="pl-2 rounded-full" (click)="deleteProduct(product.product_id)">
                 <mat-icon color="warn">delete</mat-icon>
-              </button> 
+              </button>
             </td>
           </tr>
         </tbody>
