--- a/src/components/top-vendas/top-vendas.component.html
+++ b/src/components/top-vendas/top-vendas.component.html
@@ -4,7 +4,7 @@
     <div class="ml-64 w-full px-8 py-6">
   
       <div class="flex justify-between mb-6">
-        <h2 class="text-4xl font-bold text-slate-950">Top Vendas - Destaque</h2>
+        <h2 class="text-4xl font-bold text-slate-950">Top Vendas - Destaques</h2>
       </div>
   
       <div class="overflow-x-auto">
